--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
 - git fetch
 - "./diff.sh"
-- "./frontend_test.sh"
+- if [ "$SKIP_NIGHTWATCH" == "true" ]; then echo "skipping nightwatch tests"; else sh ./frontend_test.sh; fi
 after_success:
 - bash <(curl -X POST --data "apiKey=$apiKey&branch=$BRANCH" http://$url/update)
 notifications:
