--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-# Autodetect text files
-* text=auto
-
 #git on windows will convert lf to crlf which makes eslint freak out. This keeps it in linux style.
-* text eol=lf
+*.js text eol=lf
+static/vendor/**/*.js binary
