--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,5 @@
 * text=auto
 
 #git on windows will convert lf to crlf which makes eslint freak out. This keeps it in linux style.
-* text eol=lf
-
-# Denote all files that are truly binary and should not be modified.
-*.png binary
-*.jpg binary
+*.js text eol=lf
+static/vendor/**/*.js binary
