--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "~1.16.0",
     "browser-sync": "^2.24.7",
     "compression": "^1.6.2",
