--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ addons:
   firefox: latest
 env:
 - SC_DEMO_USER_PASSWORD=schulcloud
+- BACKEND_URL=https://api.niedersachsen.cloud
+- PUBLIC_BACKEND_URL=https://api.niedersachsen.cloud
 before_install:
 - npm install pm2 -g
 - export DISPLAY=:99.0
