--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "serve-favicon": "~2.3.2",
     "shortid": "^2.2.8",
     "showdown": "^1.7.1",
+    "spdy": "^3.4.7",
     "string-strip-html": "^3.2.0",
     "string_decoder": "^1.0.1",
     "truncate-html": "^1.0.0",
