--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 #git on windows will convert lf to crlf which makes eslint freak out. This keeps it in linux style.
 *.js text eol=lf
+static/vendor/**/*.js binary
