--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nightwatch": "^1.0.6",
-    "nodemon": "^1.18.3",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.18.3",
     "pump": "^1.0.2",
     "rebuild-changed-entrypoints-webpack-plugin": "^1.0.1",
     "script-loader": "^0.7.2",
@@ -99,6 +99,8 @@
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
     "webpack": "^4.16.1",
-    "webpack-stream": "^4.0.3"
+    "webpack-stream": "^4.0.3",
+    "workbox-build": "^3.4.1",
+    "workbox-cli": "^3.5.0"
   }
 }
