--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "csv-parse": "^1.2.0",
     "debug": "~2.6.0",
     "diff-dom": "^2.4.0",
