--- a/package.json
+++ b/package.json
@@ -14,55 +14,55 @@
     "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
   },
   "dependencies": {
-    "body-parser": "~1.16.0",
-    "compression": "^1.6.2",
+    "body-parser": "~1.18.3",
+    "compression": "^1.7.3",
     "cookie-parser": "~1.4.3",
-    "csv-parse": "^1.2.0",
-    "debug": "~2.6.0",
+    "csv-parse": "^3.0.0",
     "diff-dom": "^2.4.0",
-    "express": "~4.14.1",
+    "express": "~4.16.3",
     "express-session": "^1.15.2",
     "fast-csv": "^2.4.1",
-    "feedr": "^2.13.5",
+    "feedr": "^3.0.0",
     "fullcalendar": "^3.9.0",
     "handlebars-layouts": "^3.1.4",
-    "handlebars-wax": "^5.1.1",
+    "handlebars-wax": "^6.1.0",
     "hbs": "~4.0.1",
-    "ipaddr.js": "^1.5.4",
+    "ipaddr.js": "^1.8.1",
     "jquery-datetimepicker": "^2.5.20",
-    "jsonwebtoken": "^7.3.0",
-    "lodash": "^4.17.4",
-    "marked": "^0.3.6",
-    "mathjax": "^2.7.5",
-    "maxmind": "^2.3.0",
-    "method-override": "^2.3.7",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
+    "marked": "^0.5.0",
+    "maxmind": "^2.7.0",
+    "method-override": "^3.0.0",
     "moment": "^2.22.2",
-    "morgan": "~1.7.0",
-    "multer": "^1.3.0",
+    "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "nexboard-api-js": "git://github.com/schul-cloud/nexboard-api-js.git",
-    "oauth-1.0a": "^2.1.0",
+    "oauth-1.0a": "^2.2.4",
     "path.join": "^1.0.0",
-    "query-string": "^5.0.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "query-string": "^6.1.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-sortable-hoc": "^0.8.3",
-    "request": "^2.79.0",
+    "request": "^2.88.0",
     "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.2",
-    "shortid": "^2.2.8",
+    "serve-favicon": "~2.5.0",
+    "shortid": "^2.2.13",
     "showdown": "^1.7.1",
     "string-strip-html": "^3.2.0",
-    "string_decoder": "^1.0.1",
-    "truncate-html": "^1.0.0",
-    "winston": "^3.0.0"
+    "string_decoder": "^1.1.1",
+    "truncate-html": "^1.0.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-react-jsx": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chromedriver": "^2.38.3",
@@ -71,36 +71,36 @@
     "expose-loader": "^0.7.5",
     "geckodriver": "^1.11.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.0",
     "gulp-changed-smart": "^1.1.1",
-    "gulp-clean-css": "^3.0.3",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
-    "gulp-count": "^0.3.0",
+    "gulp-count": "^1.0.0",
     "gulp-filelog": "^0.4.1",
-    "gulp-header": "^2.0.1",
+    "gulp-header": "^2.0.5",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.1.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-optimize-js": "^1.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^7.0.1",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
     "gulp-sass-grapher": "^0.1.4",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^2.0.1",
+    "gulp-uglify": "^3.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "nightwatch": "^1.0.6",
-    "node-sass": "^4.7.2",
+    "nightwatch": "^1.0.11",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
-    "pump": "^1.0.2",
+    "pump": "^3.0.0",
     "rebuild-changed-entrypoints-webpack-plugin": "^1.0.1",
     "script-loader": "^0.7.2",
     "selenium-server": "^3.12.0",
     "vinyl-map": "^1.0.2",
     "vinyl-named": "^1.1.0",
-    "webpack": "^4.16.1",
-    "webpack-stream": "^4.0.3",
+    "webpack": "^4.18.0",
+    "webpack-stream": "^5.1.1",
     "workbox-build": "^3.4.1",
     "workbox-cli": "^3.5.0"
   }
