--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ipaddr.js": "^1.5.4",
     "jquery-datetimepicker": "^2.5.20",
     "jsonwebtoken": "^7.3.0",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "mathjax": "^2.7.5",
