--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "nodemon --inspect=9310 --watch controllers/ --watch helpers/ --watch views/ --ext js,hbs ./bin/www",
     "lint": "eslint ./bin ./controllers ./helpers ./test/mocha ./api.js ./app.js --ext .js --fix",
     "sasslint": "sass-lint -q -v",
-    "sassfix": "sass-lint-auto-fix",
+    "sasslint:fix": "sass-lint-auto-fix && sass-lint -q -v",
     "startd": "echo 'Do you mean 'npm run watch'?'",
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha test/mocha/ --recursive",
