--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "npm run lint && npm run mocha",
     "mocha": "mocha test/mocha/ --recursive",
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js",
-    "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox"
+    "frontendTests": "./node_modules/.bin/nightwatch --config nightwatch.conf.js --env chrome,firefox",
+    "frontendSingleTest": "./node_modules/.bin/nightwatch --test test/nightwatch/courses_create.js --config nightwatch.conf.js --env chrome,firefox"
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
