--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.9.0",
     "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.4.0",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
