--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "sasslintConfig": "./.sass-lint.yml",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "body-parser": "~1.16.0",
