--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,11 @@ before_install:
   - mv !(schulcloud-client) schulcloud-client
   # clone other required repositories and try to switch to branch with same name as current one
   - git clone https://github.com/schul-cloud/schulcloud-server.git schulcloud-server
-  - sh ./test/switch_branch.sh "schulcloud-server" $BRANCH_NAME
+  - sh ./schulcloud-client/test/switch_branch.sh "schulcloud-server" $BRANCH_NAME
   - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
-  - sh ./test/switch_branch.sh "docker-compose" $BRANCH_NAME
+  - sh ./schulcloud-client/test/switch_branch.sh "docker-compose" $BRANCH_NAME
   - git clone https://github.com/schul-cloud/integration-tests.git integration-tests
-  - sh ./test/switch_branch.sh "integration-tests" $BRANCH_NAME
+  - sh ./schulcloud-client/test/switch_branch.sh "integration-tests" $BRANCH_NAME
 install:
   # client packages are needed for mocha
   - cd schulcloud-client && npm ci && cd ..
