--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
     - FEATURE_TEAMS_ENABLED=true
     - IT_CLIENT_HOST=client
     #- BRANCH_NAME=${TRAVIS_PULL_REQUEST_BRANCH:=$TRAVIS_BRANCH}
-    - BRANCH_NAME=master
+    - BRANCH_NAME=develop
 before_install:
   - openssl aes-256-cbc -K $encrypted_839866e404c6_key -iv $encrypted_839866e404c6_iv -in travis_rsa.enc -out travis_rsa -d
   - echo $BRANCH_NAME
@@ -35,7 +35,7 @@ install:
   # client packages are needed for mocha
   - cd schulcloud-client && npm ci && cd ..
   # dependencies for integration tests
-  - cd docker-compose && docker-compose -f docker-compose.integration-test.yml up -d && cd ..
+  - docker-compose -f docker-compose/docker-compose.integration-test-Build.yml up -d
   - cd integration-tests && npm ci && cd ..
   - cd schulcloud-server && npm run setup && cd .. # initially seed database
 script:
