--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ before_install:
   - sh ./schulcloud-client/test/switch_branch.sh "schulcloud-server" $BRANCH_NAME
   - git clone https://github.com/schul-cloud/docker-compose.git docker-compose
   - sh ./schulcloud-client/test/switch_branch.sh "docker-compose" $BRANCH_NAME
-  - git clone https://github.com/schul-cloud/integration-tests.git integration-tests
+  # TODO remove branch (-b hotfix-travis) from next line
+  - git clone -b hotfix-travis https://github.com/schul-cloud/integration-tests.git integration-tests
   - sh ./schulcloud-client/test/switch_branch.sh "integration-tests" $BRANCH_NAME
 install:
   # boot servers for integration tests
