--- a/.mergify.yml
+++ b/.mergify.yml
@@ -21,7 +21,7 @@ pull_request_rules:
           - ready to merge
   - name: remove "ready to merge" label when pull is not approved
     conditions:
-      - "#approved-reviews-by=0"
+      - status-failure~=pullapprove
       - label~=ready to merge
       - -merged
     actions:
