--- a/.mergify.yml
+++ b/.mergify.yml
@@ -17,6 +17,8 @@ pull_request_rules:
       - label=ready to merge
     actions:
       label:
+        add:
+          - auto_merged
         remove:
           - ready to merge
   - name: remove "ready to merge" label when pull is not approved
