--- a/Dockerfile.thr
+++ b/Dockerfile.thr
@@ -13,11 +13,10 @@ RUN npm install -g nodemon gulp-cli && npm install
 COPY . .
 #COPY ./localtime /etc/localtime
 
-ENV SC_THEME=open
+ENV SC_THEME=thr
 ENV TZ=Europe/Berlin
 
 RUN gulp && rm .gulp-changed-smart.json
 
 VOLUME /home/node/app/build
 CMD npm start
-
