--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
-    "mathjax": "2.7.0",
+    "mathjax": "^2.7.5",
     "maxmind": "^2.3.0",
     "method-override": "^2.3.7",
     "moment": "^2.22.2",
